--- a/app/roman-to-integer/roman-to-integer.template.html
+++ b/app/roman-to-integer/roman-to-integer.template.html
@@ -1,5 +1,6 @@
-<p>Enter a Roman numeral</p>
-<input type="text" ng-model="ic.romanNumeral" ng-change="ic.translateToInteger()"/><br/><br/>
+<div class = "converter">
+<p class = "label">Enter a Roman numeral</p>
+<input type="text" ng-model="ic.romanNumeral" ng-change="ic.translateToInteger()"/><br/>
 
-<span>Integer value:{{ic.integer}}</span><br/>
-
+<p class = "label">Integer value</p> <div class = "converter-results">{{ic.integer}}</div><br/>
+</div>
