--- a/app/integer-to-roman/integer-to-roman.template.html
+++ b/app/integer-to-roman/integer-to-roman.template.html
@@ -1,7 +1,7 @@
 
 <div class = "converter">
 <p class = "label">Enter a Integer value</p>
-<input type="text" ng-model="rc.integer" ng-change="rc.translateToRoman()"/><br/>
+<input type="text" style ="width:250px" ng-model="rc.integer" ng-change="rc.translateToRoman()"/><br/>
 
 <p class = "label">Roman numeral</p> <div class = "converter-results">{{rc.romanNumeral}}</div><br/>
 <div>
