--- a/app/roman-to-integer/roman-to-integer.template.html
+++ b/app/roman-to-integer/roman-to-integer.template.html
@@ -1,6 +1,6 @@
 <div class = "converter">
 <p class = "label">Enter a Roman numeral</p>
-<input type="text" ng-model="ic.romanNumeral" ng-change="ic.translateToInteger()"/><br/>
+<input type="text" style ="width:250px" ng-model="ic.romanNumeral" ng-change="ic.translateToInteger()"/><br/>
 
 <p class = "label">Integer value</p> <div class = "converter-results">{{ic.integer}}</div><br/>
 </div>
